# osg

OSGBeginnerGuideCode/: .gitignore
OpenSceneGraph.3.0.Beginners.Guide.code.qt/: CMakeCache.txt  build.ninja  cmake_install.cmake
OpenSceneGraph.3.0.Beginners.Guide.code.qt/.cmake/api/v1/reply/: cache-v2-854c9b76d45a451970b2.json  cmakeFiles-v1-cc9cc7e2f29e497ee569.json  codemodel-v2-8c06945f0e8831deb071.json  index-2022-11-13T13-44-44-0153.json  target-helloworld-Debug-10df6a664e36509e927e.json  target-helloworld_autogen-Debug-744a9defa0ddee2f27e7.json  target-helloworld_autogen_timestamp_deps-Debug-722d2e3de8c44be608ad.json
OpenSceneGraph.3.0.Beginners.Guide.code.qt/.qtc_clangd/: compile_commands.json
OpenSceneGraph.3.0.Beginners.Guide.code.qt/.qtc_clangd/.cache/clangd/index/: ArgumentParser.3756770E7503BE12.idx  Block.63652D721BBDADFA.idx  BoundingBox.6C599D9594D0735B.idx  BufferObject.54D94811BDF4CA1E.idx  Callback.78CD1B7B2D91D3B8.idx  Callbacks.8D4FC0688AF261C4.idx.tmp.3bd839db  ClearNode.87F4DA17F8262C89.idx  CoordinateSystemNode.715F75DDE5C5E2D0.idx  DatabasePager.B41884C194AD7740.idx  Endian.16326CFB715FAABB.idx  Font.61654D0FED67D2CC.idx  GL.CB921A439EF06551.idx  GLExtensions.1B3D9F8385141DB6.idx  GLObjects.8339D6AEE6E768CE.idx  GraphicsCostEstimator.C6EFE007570E1C05.idx  GraphicsWindow.E496613444EB84D2.idx  ImagePager.A9FF276857891C07.idx  ImageProcessor.74FABC86DE11951A.idx  IntersectionVisitor.C90F7173992583E1.idx  Light.6F5D0238A904361A.idx  LineSegmentIntersector.6D687C9FBFAEE74C.idx  MainWindow.h.BF0004409663DCBE.idx  Math.FC56DADA65F1999B.idx  MixinVector.DC146AE9E2728386.idx  Node.767EC0207BA3C96E.idx  OSGRenderer.cpp.A18D55F58907C229.idx  OSGRenderer.h.624237C884597D2B.idx  OSGWidget.h.E70D0396870DFEFD.idx  Observer.4F587D25F5D757A9.idx  OccluderNode.86F9112C168AF5A8.idx  PickHandler.h.27424D6337957399.idx  Plane.76C37BD9DFC56619.idx  PrimitiveSet.7681B443BE3BAB29.idx  QImage.E418D9B0C8C272E5.idx  QMouseEvent.A6A7DA644638C223.idx  QOpenGLContext.4B648665DF9F098E.idx  QOpenGLShaderProgram.CEFC03C7EAB18B3B.idx  QOpenGLVertexArrayObject.39B96CDEFC5BC1E1.idx  QPen.5FEE2FC60AD81F65.idx  QReadWriteLock.CD28874E2F8D5F94.idx  (+73 more)
OpenSceneGraph.3.0.Beginners.Guide.code.qt/chapter1/: CMakeLists.txt  main.cpp
OpenSceneGraph.3.0.Beginners.Guide.code.qt/chapter4_ColoredQuad/: CMakeLists.txt  MainWindow.h  chapter4_ColoredQuad.cpp  chapter4_ColoredQuad.h  chapter4_DrawOctahedron.cpp  chapter4_DrawOctahedron.h  chapter4_PrimitiveFunctor.cpp  chapter4_PrimitiveFunctor.h  chapter4_TessellatePolygon.cpp  chapter4_TessellatePolygon.h  chapter5_AddModel.cpp  chapter5_AddModel.h  chapter5_LOD.cpp  chapter5_LOD.h  chapter5_SwitchAnimate.cpp  chapter5_SwitchAnimate.h  chapter5_SwitchNode.cpp  chapter5_SwitchNode.h  chapter5_TranslateNode.cpp  chapter5_TranslateNode.h  chapter7_HUD.cpp  chapter7_HUD.h  chapter7_MultiSampling.cpp  chapter7_MultiSampling.h  chapter8_GeometryDynamically.cpp  chapter8_GeometryDynamically.h  main.cpp  main2.cpp  mainwindow.cpp  osgQWidget.cpp  osgQWidget.h
OpenSceneGraph.3.0.Beginners.Guide.code.qt/chapter4_SimpleObject/: CMakeLists.txt  MainWindow.h  OSGWidget.cpp  OSGWidget.h  mainwindow.cpp
QtOSG/: CMakeLists.txt  MainWindow.h  OSGRenderer.cpp  OSGRenderer.h  OSGWidget.cpp  OSGWidget.h  mainwindow.cpp  osgQOpenGLWidget.cpp  osgQOpenGLWidget.h  osgQOpenGLWindow.cpp  osgQOpenGLWindow.h
